--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-.<p>This is NOT for free use.</p>
+<p>This is NOT for free use.</p>
 <audio controls>
   <source src="audio/athompson-introtosharing.mp3" type="audio/mp3">
 </audio>
